--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <dt>Phone:</dt>
     <dd>9566260656</dd>
     <dt>LinkedIn:</dt>
-    <dd> <a href="https://www.linkedin.com/in/mohammed-shahin-ali-a-s-0a9573240">https://www.linkedin.com/in/mohammed-shahin-ali-a-s-0a9573240</a></dd>
+    <dd> <a href="https://www.linkedin.com/in/mohammed-shahin-ali-a-s-0a9573240">linkedIn</a></dd>
     <dt> Email:</dt>  
     <dd><a href=https://mail.google.com/mail/u/0/#inbox?compose=new>shahinali1205@gmail.com</a> </dd>
   </dl>
