--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
   <h1>Mohammed shahin Ali</h1>
   
   <h2>Contact</h2>
+
+  <h2>Languages</h2>
+  <ul>
+    <li>Address:</li>
+    <p>No: 27, Bharathiyar Street, Guduvancherry, Chennai 603202.</p>
+    <li>Phone:</li>
+    <p>9566260656</p>
+    <li>LinkedIn:</li>
+    <a href="https://www.linkedin.com/in/mohammed-shahin-ali-a-s-0a9573240">linkedIn.com</a>
+    <li>Email</li>
+    <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">shahinali1205@gmail.com</a>
+
+  </ul>
   
-  <dl>
-    <dt>Address:</dt>
-    <dd>No: 27, Bharathiyar Street, Guduvancherry, Chennai 603202.</dd>
-    <dt>Phone:</dt>
-    <dd>9566260656</dd>
-    <dt>LinkedIn:</dt>
-    <dd> <a href="https://www.linkedin.com/in/mohammed-shahin-ali-a-s-0a9573240">linkedIn</a></dd>
-    <dt> Email:</dt>  
-    <dd><a href=https://mail.google.com/mail/u/0/#inbox?compose=new>shahinali1205@gmail.com</a> </dd>
-  </dl>
 
   <h2>Languages</h2>
   <ul>
@@ -33,7 +36,7 @@
   </ul>
   <h2>Hobbies</h2>
   <ul>
-    <li>Kabaddi</li>
+    <li>Kabaddi</lil>
     <li>	Traveling</li>
     <li>Cricket</li>
   </ul>
